feat: PATRON2020-234 add notification endpoint, add schema and tests for endpoint and db actions
